fix clip path on safari
change URL with INSET

--- a/css/style.scss
+++ b/css/style.scss
@@ -456,8 +456,10 @@ section {
     img {
         width: 100%;
         height: auto;
-        -webkit-clip-path: url(#atomClip);
-        clip-path: url(#atomClip);
+        // -webkit-clip-path: url(#atomClip);
+        // clip-path: url(#atomClip);
+        -webkit-clip-path: inset(3% round 46% 42%);
+        clip-path: inset(3% round 46% 42%);
     }
 
     p {
